# cmake_install_example

./: CMakeLists.txt  main.cpp  mytestlib.cpp  mytestlibConfig.cmake.in
include/mytestlib/: mytestlib.h
